deploy: d9244c0ae30beeac13487a66ac17cbecf3cf3d06

--- a/frontend_src_api_routes_users_users.js.html
+++ b/frontend_src_api_routes_users_users.js.html
@@ -92,7 +92,7 @@
 
 /**
  * @description Fetch all those ssot names and ids, which are available for the current user
- * @param { String } userId - UserId for which the ssots will be fetched
+ * @param { String } userId UserId for which the ssots will be fetched
  * @returns {Array} Array of objects containing ssotId, robotName and starterId of each found robot
  */
 const fetchSsotsForUser = async (userId) => {
@@ -103,8 +103,8 @@ const fetchSsotsForUser = async (userId) => {
 
 /**
  * @description Create a new robot with the specified name for the specified user
- * @param {String} userId - User for which the robot will be created
- * @param {String} robotName - Name of the new robot
+ * @param {String} userId User for which the robot will be created
+ * @param {String} robotName Name of the new robot
  * @returns {Object} Object containing robotId and robotName
  */
 const createNewRobot = async (userId, robotName) => {
@@ -123,7 +123,7 @@ const createNewRobot = async (userId, robotName) => {
   return response;
 };
 
-export { fetchSsotsForUser, createNewRobot /* , shareRobotWithUser */ };
+export { fetchSsotsForUser, createNewRobot };
 </code></pre>
         </article>
     </section>
