--- a/frontend_src_utils_parser_robotCodeToSsotParsing_robotCodeToSsotParsing.js.html
+++ b/frontend_src_utils_parser_robotCodeToSsotParsing_robotCodeToSsotParsing.js.html
@@ -95,9 +95,7 @@ import {
   getRobotName,
 } from '../../sessionStorage/localSsotController/ssot';
 
-const {
-  default: customNotification,
-} = require('../../componentsFunctionality/notificationUtils');
+import customNotification from '../../componentsFunctionality/notificationUtils';
 
 const FOURSPACE = '    ';
 
@@ -150,10 +148,10 @@ const getApplicationArray = (robotCodeSettingsSection) => {
   let errorWasThrown;
 
   robotCode.forEach((line) => {
-    const regexForRpaAlias = /Library +RPA[.][a-zA-Z]+/;
+    const REGEX_FOR_RPA_ALIAS = /Library +RPA[.][a-zA-Z]+/;
 
     const elementStartsWithLibrary = line.startsWith('Library ');
-    const rpaAliasIsCorrect = regexForRpaAlias.test(line);
+    const rpaAliasIsCorrect = REGEX_FOR_RPA_ALIAS.test(line);
     const applicationIsAvailable = availableApplications.includes(
       typeof line.split('RPA.')[1] === 'undefined'
         ? ''
@@ -317,15 +315,16 @@ const getInstructionBlocksFromTaskSection = (
 ) => {
   let errorWasThrown;
   const instructionBlocks = [];
-  const regexForOutputValue = /\${(.)+} =/;
-  const splitPlaceholder = '§&amp;§';
+  const REGEX_FOR_OUTPUT_VALUE = /\${(.)+} =/;
+  const SPLIT_PLACEHOLDER = '§&amp;§';
 
   robotCodeTaskSection.slice(1).forEach((line) => {
     if (errorWasThrown) return;
     let currentLine = line;
     const currentLineIncludesSplitPlaceholder =
-      currentLine.includes(splitPlaceholder);
-    const currentLineDefinesOutputValue = regexForOutputValue.test(currentLine);
+      currentLine.includes(SPLIT_PLACEHOLDER);
+    const currentLineDefinesOutputValue =
+      REGEX_FOR_OUTPUT_VALUE.test(currentLine);
     const currentLineStartsWithFourspace = currentLine.startsWith(FOURSPACE);
 
     if (!currentLineStartsWithFourspace) {
@@ -342,7 +341,7 @@ const getInstructionBlocksFromTaskSection = (
       return;
     }
 
-    currentLine = currentLine.trim().replace(/( {4})/g, splitPlaceholder);
+    currentLine = currentLine.trim().replace(/( {4})/g, SPLIT_PLACEHOLDER);
 
     if (currentLineDefinesOutputValue) {
       const outputValueName = getOutputName(currentLine);
@@ -351,12 +350,12 @@ const getInstructionBlocksFromTaskSection = (
 
       currentLine = currentLineWithoutOutputValueName(
         currentLine,
-        splitPlaceholder
+        SPLIT_PLACEHOLDER
       );
     }
 
     if (!errorWasThrown) {
-      let rpaTask = getRpaTask(currentLine, splitPlaceholder);
+      let rpaTask = getRpaTask(currentLine, SPLIT_PLACEHOLDER);
       const allMatchingCombinations = taskAndApplicationCombinations.filter(
         (singleCombination) => {
           if (rpaTask === singleCombination.task) return true;
@@ -381,7 +380,7 @@ const getInstructionBlocksFromTaskSection = (
 
       rpaTask = rpaTask.replace(`${matchingCombination.application}.`, '');
 
-      const rpaParameters = getRpaParameters(currentLine, splitPlaceholder);
+      const rpaParameters = getRpaParameters(currentLine, SPLIT_PLACEHOLDER);
 
       instructionBlocks[instructionBlocks.length - 1].rpaTask = rpaTask;
       instructionBlocks[instructionBlocks.length - 1].paramArray =
@@ -491,7 +490,6 @@ const buildSingleParameterObject = (
       } else {
         singleParameterObject.value = singleParamArray[index];
       }
-
       return singleParameterObject;
     }
   );
@@ -506,8 +504,8 @@ const buildSingleParameterObject = (
 
 /**
  * @description Build the elementsArray of the ssot
- * @param {Array} robotCodeTaskSection Robot code w/o empty lines as an array of Strings
- * @param {Array} declaredApplications All declared Aplications from ***settings*** section as Strings
+ * @param {Array} robotCodeTaskSection Robot code w/o empty lines as an array of strings
+ * @param {Array} declaredApplications All declared applications from ***settings*** section as strings
  * @param {String} robotId Id of the current robot / ssot
  * @returns {Array} elementsArray with all needed properties
  */
