--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
 To run a development preview of the app, navigate to the server directory and run <code>npm run local</code> to start the API server, navigate into the frontend folder and run <code>npm start</code> again to also start the frontend.
 Now check http://localhost:3000/ to have a look at the app.</p>
 <p>To run the local client, follow the steps in the <a href="https://github.com/bptlab/ark_automate_local#readme">Readme of the local client</a>.</p>
+<h2>Product Demo</h2>
+<p><a href="https://www.youtube.com/watch?v=EIbrYbvtknI"><img src="https://i.imgur.com/Q9UTQSY.png" alt="Watch the video"></a></p>
 <h2>Contribute</h2>
 <p>Contribution and feedback are encouraged and always welcome. For more information about how to contribute, the project structure, as well as additional contribution information, see our <a href=".github/CONTRIBUTING.md">Contribution Guidelines</a>. By participating in this project, you agree to abide by its <a href=".github/CODE_OF_CONDUCT.md">Code of Conduct</a> at all times.</p>
 <h2>Contributors</h2>
