--- a/server_socket_socketHelperFunctions.js.html
+++ b/server_socket_socketHelperFunctions.js.html
@@ -104,6 +104,7 @@ mongoose.set('useFindAndModify', false);
  * @description Fetches the ssot of a given robot from the database and parses the ssot to robot code
  * @param {String} robotId Id of the robot that the robot code will be fetched for
  * @param {String} jobId Id of the current job
+ * @returns {String} Code of the robot
  */
 exports.getRobotCodeForJob = async (robotId, jobId) => {
   try {
@@ -117,6 +118,7 @@ exports.getRobotCodeForJob = async (robotId, jobId) => {
 /**
  * @description Fetches the ssot of a given robot from the database and parses the ssot to robot code
  * @param {String} robotId Id of the robot that the robot code will be fetched for
+ * @returns {String} Code of the robot
  */
 exports.getRobotCode = async (robotId) => {
   try {
@@ -130,6 +132,7 @@ exports.getRobotCode = async (robotId) => {
 /**
  * @description Finds a specific robot job and retrieves the parameter array
  * @param {String} jobId Id of the robot for which all parameters will be retrieved
+ * @returns {Array} All parameter objects of the robot
  */
 exports.getRobotJobParameters = async (jobId) => {
   const robotJobParameters = await mongoose
@@ -142,8 +145,8 @@ exports.getRobotJobParameters = async (jobId) => {
 };
 
 /**
- * @description Fetches the ssot from the database and parses the ssot to robot code
- * @param {String} robotId Id of the robot which will be parsed to robot code
+ * @description Fetches the user ids of all the users
+ * @returns {Array} All user ids
  */
 exports.getAllUserIds = async () => {
   try {
@@ -164,6 +167,7 @@ exports.getAllUserIds = async () => {
  * @param {String} robotId Id of the robot tha will be executed
  * @param {String} status Current status of the job (either waiting, executing, successful or failed)
  * @param {Array} parameters Different parameters the user defined before executing the robot
+ * @returns {String} ObjectId of the new job object
  */
 exports.createJob = async (userId, robotId, status, parameters) => {
   const job = new jobsModel.Job({
