--- a/frontend_src_components_pages_Home_Home.jsx.html
+++ b/frontend_src_components_pages_Home_Home.jsx.html
@@ -123,7 +123,7 @@ const Home = () => {
           fast, easy, automation
         &lt;/Title>
         &lt;p>{message}&lt;/p>
-        &lt;Link to='/robot_overview'>
+        &lt;Link to='/robotOverview'>
           &lt;Button style={{ margin: '0 auto', display: 'block' }} type='primary'>
             Go to my Robots
           &lt;/Button>
