--- a/frontend_src_utils_parser_ssotToBpmnParsing_ssotToBpmnParsing.js.html
+++ b/frontend_src_utils_parser_ssotToBpmnParsing_ssotToBpmnParsing.js.html
@@ -128,7 +128,9 @@ const buildCorrectOrder = (ssot) => {
  * @description Workaround which takes in the created element and updates its id to the one saved in the ssot.
  * The bpmn js cli extension will just create elements, but not ensure their Id to match the one in the ssot therefore this workaround is needed.
  * @param {*} modeling Modeling extension
+ * @param {*} cli Modeling cli extension
  * @param {Object} element First element (start element) to process
+ * @param {*} cliResult Bpmn object
  * @returns {String} Now set id of the shape
  */
 const updateIdForElement = (modeling, cli, element, cliResult) => {
@@ -159,7 +161,7 @@ const drawElement = (cli, modeling, element, previousElement) => {
       );
       break;
     case 'MARKER':
-      // currently this is can only be an end event; in the future ther eshould be another switch here
+      // currently this can only be an end event; in the future there should be another switch here
       createdElement = cli.append(
         previousElement,
         'bpmn:EndEvent',
