--- a/server_utils_ssotToRobotParsing_generateCodeForRpaTasks.js.html
+++ b/server_utils_ssotToRobotParsing_generateCodeForRpaTasks.js.html
@@ -121,11 +121,12 @@ const setOutputValue = (paramObject) => {
 };
 
 /**
- * @description Appends all provided parameters to a string which can be used to generate the RPAf file
- * @param {Object} parameterObject Parameter object that will be checked and looped through
+ * @description Will append all provided parameters to a string which can be used to generate the RPAf file
+ * @param {Object} parameterObject The parameter object to check and loop through
+ * @param {String} parsingMode Indicates if the parser is used for the frontend or the local client
  * @returns {String} String specifying the input parameters with the needed spacing in between
  */
-const appendRpaInputParameter = (parameterObject) => {
+const appendRpaInputParameter = (parameterObject, parsingMode) => {
   let newCodeLine = '';
 
   const sortedInputs = parameterObject.rpaParameters.sort(
@@ -137,7 +138,7 @@ const appendRpaInputParameter = (parameterObject) => {
       newCodeLine += `!!${parameter.name}!!`;
       return;
     }
-    if (parameter.value === '') {
+    if (parameter.value === '' &amp;&amp; parsingMode === 'frontend') {
       newCodeLine += `%%${parameter.name}%%`;
       return;
     }
@@ -169,6 +170,7 @@ const successorTasksExist = (currentElement) =>
  * @param {Array} parameters All parameter objects of the robot
  * @param {Array} attributes All attribute objects of the robot
  * @param {String} codeToAppend Current code that will be extended
+ * @param {String} parsingMode Indicates if the parser is used for the frontend or the local client
  * @returns {string} Generated .robot code for the tasks section
  */
 const writeCodeForElement = (
@@ -177,7 +179,8 @@ const writeCodeForElement = (
   parameters,
   attributes,
   codeToAppend,
-  duplicateTasks
+  duplicateTasks,
+  parsingMode
 ) => {
   const currentElement = elements.find((element) => element.id === id);
   let combinedCode = codeToAppend;
@@ -200,7 +203,10 @@ const writeCodeForElement = (
         newCodeLine += currentAttributeObject.rpaTask;
       }
       if (currentParameterObject) {
-        newCodeLine += appendRpaInputParameter(currentParameterObject);
+        newCodeLine += appendRpaInputParameter(
+          currentParameterObject,
+          parsingMode
+        );
       }
 
       newCodeLine += LINEBREAK;
@@ -209,7 +215,6 @@ const writeCodeForElement = (
   }
 
   if (successorTasksExist(currentElement)) {
-    // Xor handling is needed here in the future
     currentElement.successorIds.forEach((successorId) => {
       combinedCode = writeCodeForElement(
         successorId,
@@ -217,7 +222,8 @@ const writeCodeForElement = (
         parameters,
         attributes,
         combinedCode,
-        duplicateTasks
+        duplicateTasks,
+        parsingMode
       );
     });
   }
@@ -227,12 +233,19 @@ const writeCodeForElement = (
 };
 
 /**
- * @description Generates the .robot code for all RPA Tasks
- * @param {Array} elements All the elements from the SSoT
- * @param {Object} metaData MetaData of the robot
+ * @description Receives an array of all elements and generates the .robot code for all RPA Tasks
+ * @param {Array} elements All the elements from the ssot
+ * @param {Array} parameters Parameter objects of the robot
+ * @param {Array} attributes Attribute objects of the robot
+ * @param {String} parsingMode Indicates if the parser is used for the frontend or the local client
  * @returns {string} Generated .robot code for the tasks section
  */
-const generateCodeForRpaTasks = async (elements, parameters, attributes) => {
+const generateCodeForRpaTasks = async (
+  elements,
+  parameters,
+  attributes,
+  parsingMode
+) => {
   const startElement = elements.find(
     (element) => element.predecessorIds.length === 0
   );
@@ -244,14 +257,14 @@ const generateCodeForRpaTasks = async (elements, parameters, attributes) => {
     .filter((singleTask) => singleTask.count > 1)
     // eslint-disable-next-line no-underscore-dangle
     .map((singleDuplicateTask) => singleDuplicateTask._id);
-
   const codeForRpaTasks = writeCodeForElement(
     startElement.id,
     elements,
     parameters,
     attributes,
     '',
-    listOfDuplicates
+    listOfDuplicates,
+    parsingMode
   );
 
   return codeForRpaTasks;
