--- a/server_utils_ssotToRobotParsing_ssotToRobotParser.js.html
+++ b/server_utils_ssotToRobotParsing_ssotToRobotParser.js.html
@@ -103,7 +103,7 @@ const { generateCodeForRpaTasks } = require('./generateCodeForRpaTasks');
 
 /**
  * @description Parses the given SSoT to an executable .robot file
- * @param {Object} ssot SSoT
+ * @param {Object} ssot Ssot of the robot
  * @returns {string} Code that has to be put in .robot file
  */
 const parseSsotToRobotCode = async (ssot) => {
@@ -112,14 +112,15 @@ const parseSsotToRobotCode = async (ssot) => {
   result.parsedCode += await generateCodeForRpaTasks(
     ssot.elements,
     parameters,
-    result.attributeObjects
+    result.attributeObjects,
+    'frontend'
   );
   return result.parsedCode;
 };
 
 /**
- * @description Parses the given SSoT and parameters of the robot job to an executable .robot file
- * @param {Object} ssot Ssot
+ * @description Parses the given ssot and parameters of the robot job to an executable .robot file
+ * @param {Object} ssot Ssot of the robot
  * @param {Object} jobId Id of the job
  * @returns {string} Code that has to be put in .robot file
  */
@@ -129,13 +130,14 @@ const parseSsotAndJobToRobotCode = async (ssot, jobId) => {
   result.parsedCode += await generateCodeForRpaTasks(
     ssot.elements,
     parameters,
-    result.attributeObjects
+    result.attributeObjects,
+    'local client'
   );
   return result.parsedCode;
 };
 
 /**
- * @description Parses the Ssot provided by its id to an executable .robot file
+ * @description Parses the ssot provided by its id to an executable .robot file
  * @param {String} robotId Id of the ssot which will be parsed
  * @returns {string} Code that has to be put in .robot file
  */
@@ -145,7 +147,7 @@ const parseSsotById = async (robotId) => {
 };
 
 /**
- * @description Parses the Ssot provided by its id to an executable .robot file
+ * @description Parses the ssot provided by its id to an executable .robot file
  * @param {String} robotId Id of the ssot which will be parsed
  * @param {String} jobId Id of the current robotJob that will be executed
  * @returns {string} Code that has to be put in .robot file
